# controlx

./: .env  CNAME  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
controlx/: DockerFile  asgi.py  dockercompose.yml  gitignore  render.yaml  settings.py  urls.py  wsgi.py
main/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_gamingcontroller_image.py  0003_alter_gamingcontroller_year.py  0004_gamingcontroller_user.py  0005_profile.py  0006_gamingcontroller_post_time.py  0007_alter_gamingcontroller_post_time.py
main/templates/: controller_detail.html  home.html  learn_more.html  main.html  new_post.html
main/templates/partials/: footer.html  header.html
static/styles/: style.css
staticfiles/styles/: style.css
texts/: admin.py  models.py  views.py
texts/migrations/: 0001_initial.py
texts/templates/: learn_more.html
