[project]
name = "controlx"
version = "0.1.0"
description = ""
authors = [
    {name = "joao salgueiro",email = "jp-siqueira@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-allauth[socialaccount] (>=65.8.1,<66.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dj-database-url (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
name = "controlx"         
version = "0.1.0"        
description = "Description"  
authors = ["João Salgueiro <jpsalgueiro.dev@gmail.com>"]
packages = [{include = "controlx", from = "src"}]

[tool.poetry.dependencies]
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
