[project]
name = "controlx"
version = "0.1.0"
description = ""
authors = [
    {name = "joao salgueiro",email = "jp-siqueira@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (==5.1.7)",
    "pillow (==11.1.0)",
    "django-allauth (==65.8.1)",
    "whitenoise (==6.9.0)",
    "gunicorn (==23.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dj-database-url (>=3.0.0,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asgiref (==3.8.1)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "cryptography (==44.0.3)",
    "idna (==3.10)",
    "oauthlib (==3.2.2)",
    "packaging (==25.0)",
    "pycparser (==2.22)",
    "pyjwt (==2.10.1)",
    "requests (==2.32.3)",
    "requests-oauthlib (==2.0.0)",
    "sqlparse (==0.5.3)",
    "tzdata (==2025.1)",
    "urllib3 (==2.4.0)"
]

[tool.poetry]
name = "controlx"         
version = "0.1.0"        
description = "Description"  
authors = ["João Salgueiro <jpsalgueiro.dev@gmail.com>"]
packages = [{include = "controlx", from = "src"}]

[tool.poetry.dependencies]
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
